Primer Semestre/Procesadores de Lenguaje/Defensa2/Ej1Def/ExprParser.java
// Generated from .\Expr.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMENTARIO_LINEA=1, COMENTARIO_BLOQUE=2, PUNTO_COMA=3, DOS_PUNTOS=4, COMA=5, 
		ASIGNAR=6, FUNCTION=7, MAIN=8, WHILE=9, IF=10, FOR=11, PI=12, PD=13, SUMA=14, 
		RESTA=15, INCREMENTO=16, DECREMENTO=17, MULTIPLICACION=18, DIVISION=19, 
		MAYOR_QUE=20, MENOR_QUE=21, IGUAL=22, AND=23, OR=24, BEGIN=25, END=26, 
		INCLUDE=27, VOID=28, PR_CADENA=29, PR_NUMERO=30, PUNTO=31, NUMERO=32, 
		COMILLAS=33, STRING=34, PALABRA=35, SOBRAS=36;
	public static final int
		RULE_prog = 0, RULE_comentario = 1, RULE_punto_coma = 2, RULE_palabra_reservada_include = 3, 
		RULE_nombre_variable = 4, RULE_variable_numerica = 5, RULE_cadena_de_texto = 6, 
		RULE_tipo_de_dato = 7, RULE_palabra_reservada_and = 8, RULE_palabra_reservada_or = 9, 
		RULE_palabra_reservada_begin = 10, RULE_palabra_reservada_end = 11, RULE_palabra_reservada_function = 12, 
		RULE_palabra_reservada_main = 13, RULE_palabra_reservada_while = 14, RULE_palabra_reservada_if = 15, 
		RULE_palabra_reservada_for = 16, RULE_include = 17, RULE_operador_logico = 18, 
		RULE_op_suma = 19, RULE_op_resta = 20, RULE_op_multiplicacion = 21, RULE_op_division = 22, 
		RULE_operador_aritmetico = 23, RULE_operacion = 24, RULE_nombre_funcion = 25, 
		RULE_llamada = 26, RULE_palabra_reservada_asignar = 27, RULE_palabra_reservada_void = 28, 
		RULE_asignacion = 29, RULE_palabra_reservada_cadena = 30, RULE_palabra_reservada_numero = 31, 
		RULE_tipo_de_variable = 32, RULE_declaracion = 33, RULE_expr_comparacion = 34, 
		RULE_expr_condicional = 35, RULE_while_cab = 36, RULE_while_cuerpo = 37, 
		RULE_while_loop = 38, RULE_for_loop = 39, RULE_for_cab = 40, RULE_for_cuerpo = 41, 
		RULE_if_funct = 42, RULE_if_cab = 43, RULE_if_cuerpo = 44, RULE_function_cab = 45, 
		RULE_function_cuerpo = 46, RULE_function = 47;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "comentario", "punto_coma", "palabra_reservada_include", "nombre_variable", 
			"variable_numerica", "cadena_de_texto", "tipo_de_dato", "palabra_reservada_and", 
			"palabra_reservada_or", "palabra_reservada_begin", "palabra_reservada_end", 
			"palabra_reservada_function", "palabra_reservada_main", "palabra_reservada_while", 
			"palabra_reservada_if", "palabra_reservada_for", "include", "operador_logico", 
			"op_suma", "op_resta", "op_multiplicacion", "op_division", "operador_aritmetico", 
			"operacion", "nombre_funcion", "llamada", "palabra_reservada_asignar", 
			"palabra_reservada_void", "asignacion", "palabra_reservada_cadena", "palabra_reservada_numero", 
			"tipo_de_variable", "declaracion", "expr_comparacion", "expr_condicional", 
			"while_cab", "while_cuerpo", "while_loop", "for_loop", "for_cab", "for_cuerpo", 
			"if_funct", "if_cab", "if_cuerpo", "function_cab", "function_cuerpo", 
			"function"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "';'", "':'", "','", "':='", "'function'", "'main'", 
			"'while'", "'if'", "'for'", "'('", "')'", "'+'", "'-'", "'++'", "'--'", 
			"'*'", "'/'", "'>'", "'<'", "'='", "'&&'", "'||'", "'begin'", "'end'", 
			"'include'", "'void'", "'cadena'", "'numero'", "'.'", null, "'\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMENTARIO_LINEA", "COMENTARIO_BLOQUE", "PUNTO_COMA", "DOS_PUNTOS", 
			"COMA", "ASIGNAR", "FUNCTION", "MAIN", "WHILE", "IF", "FOR", "PI", "PD", 
			"SUMA", "RESTA", "INCREMENTO", "DECREMENTO", "MULTIPLICACION", "DIVISION", 
			"MAYOR_QUE", "MENOR_QUE", "IGUAL", "AND", "OR", "BEGIN", "END", "INCLUDE", 
			"VOID", "PR_CADENA", "PR_NUMERO", "PUNTO", "NUMERO", "COMILLAS", "STRING", 
			"PALABRA", "SOBRAS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Expr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<IncludeContext> include() {
			return getRuleContexts(IncludeContext.class);
		}
		public IncludeContext include(int i) {
			return getRuleContext(IncludeContext.class,i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INCLUDE) {
				{
				{
				setState(96);
				include();
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNCTION) {
				{
				{
				setState(102);
				function();
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComentarioContext extends ParserRuleContext {
		public TerminalNode COMENTARIO_BLOQUE() { return getToken(ExprParser.COMENTARIO_BLOQUE, 0); }
		public TerminalNode COMENTARIO_LINEA() { return getToken(ExprParser.COMENTARIO_LINEA, 0); }
		public ComentarioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comentario; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterComentario(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitComentario(this);
		}
	}

	public final ComentarioContext comentario() throws RecognitionException {
		ComentarioContext _localctx = new ComentarioContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_comentario);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			_la = _input.LA(1);
			if ( !(_la==COMENTARIO_LINEA || _la==COMENTARIO_BLOQUE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Punto_comaContext extends ParserRuleContext {
		public TerminalNode PUNTO_COMA() { return getToken(ExprParser.PUNTO_COMA, 0); }
		public Punto_comaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_punto_coma; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterPunto_coma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitPunto_coma(this);
		}
	}

	public final Punto_comaContext punto_coma() throws RecognitionException {
		Punto_comaContext _localctx = new Punto_comaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_punto_coma);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(PUNTO_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Palabra_reservada_includeContext extends ParserRuleContext {
		public TerminalNode INCLUDE() { return getToken(ExprParser.INCLUDE, 0); }
		public Palabra_reservada_includeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_palabra_reservada_include; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterPalabra_reservada_include(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitPalabra_reservada_include(this);
		}
	}

	public final Palabra_reservada_includeContext palabra_reservada_include() throws RecognitionException {
		Palabra_reservada_includeContext _localctx = new Palabra_reservada_includeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_palabra_reservada_include);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(INCLUDE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Nombre_variableContext extends ParserRuleContext {
		public TerminalNode PALABRA() { return getToken(ExprParser.PALABRA, 0); }
		public Nombre_variableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nombre_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterNombre_variable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitNombre_variable(this);
		}
	}

	public final Nombre_variableContext nombre_variable() throws RecognitionException {
		Nombre_variableContext _localctx = new Nombre_variableContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_nombre_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(PALABRA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_numericaContext extends ParserRuleContext {
		public TerminalNode NUMERO() { return getToken(ExprParser.NUMERO, 0); }
		public Variable_numericaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_numerica; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterVariable_numerica(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitVariable_numerica(this);
		}
	}

	public final Variable_numericaContext variable_numerica() throws RecognitionException {
		Variable_numericaContext _localctx = new Variable_numericaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variable_numerica);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(NUMERO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cadena_de_textoContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(ExprParser.STRING, 0); }
		public Cadena_de_textoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cadena_de_texto; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterCadena_de_texto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitCadena_de_texto(this);
		}
	}

	public final Cadena_de_textoContext cadena_de_texto() throws RecognitionException {
		Cadena_de_textoContext _localctx = new Cadena_de_textoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_cadena_de_texto);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tipo_de_datoContext extends ParserRuleContext {
		public Variable_numericaContext variable_numerica() {
			return getRuleContext(Variable_numericaContext.class,0);
		}
		public Cadena_de_textoContext cadena_de_texto() {
			return getRuleContext(Cadena_de_textoContext.class,0);
		}
		public Nombre_variableContext nombre_variable() {
			return getRuleContext(Nombre_variableContext.class,0);
		}
		public Tipo_de_datoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo_de_dato; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterTipo_de_dato(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitTipo_de_dato(this);
		}
	}

	public final Tipo_de_datoContext tipo_de_dato() throws RecognitionException {
		Tipo_de_datoContext _localctx = new Tipo_de_datoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_tipo_de_dato);
		try {
			setState(123);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMERO:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				variable_numerica();
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 2);
				{
				setState(121);
				cadena_de_texto();
				}
				break;
			case PALABRA:
				enterOuterAlt(_localctx, 3);
				{
				setState(122);
				nombre_variable();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Palabra_reservada_andContext extends ParserRuleContext {
		public TerminalNode AND() { return getToken(ExprParser.AND, 0); }
		public Palabra_reservada_andContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_palabra_reservada_and; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterPalabra_reservada_and(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitPalabra_reservada_and(this);
		}
	}

	public final Palabra_reservada_andContext palabra_reservada_and() throws RecognitionException {
		Palabra_reservada_andContext _localctx = new Palabra_reservada_andContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_palabra_reservada_and);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(AND);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Palabra_reservada_orContext extends ParserRuleContext {
		public TerminalNode OR() { return getToken(ExprParser.OR, 0); }
		public Palabra_reservada_orContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_palabra_reservada_or; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterPalabra_reservada_or(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitPalabra_reservada_or(this);
		}
	}

	public final Palabra_reservada_orContext palabra_reservada_or() throws RecognitionException {
		Palabra_reservada_orContext _localctx = new Palabra_reservada_orContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_palabra_reservada_or);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(OR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Palabra_reservada_beginContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(ExprParser.BEGIN, 0); }
		public Palabra_reservada_beginContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_palabra_reservada_begin; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterPalabra_reservada_begin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitPalabra_reservada_begin(this);
		}
	}

	public final Palabra_reservada_beginContext palabra_reservada_begin() throws RecognitionException {
		Palabra_reservada_beginContext _localctx = new Palabra_reservada_beginContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_palabra_reservada_begin);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(BEGIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Palabra_reservada_endContext extends ParserRuleContext {
		public TerminalNode END() { return getToken(ExprParser.END, 0); }
		public Palabra_reservada_endContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_palabra_reservada_end; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterPalabra_reservada_end(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitPalabra_reservada_end(this);
		}
	}

	public final Palabra_reservada_endContext palabra_reservada_end() throws RecognitionException {
		Palabra_reservada_endContext _localctx = new Palabra_reservada_endContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_palabra_reservada_end);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Palabra_reservada_functionContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(ExprParser.FUNCTION, 0); }
		public Palabra_reservada_functionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_palabra_reservada_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterPalabra_reservada_function(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitPalabra_reservada_function(this);
		}
	}

	public final Palabra_reservada_functionContext palabra_reservada_function() throws RecognitionException {
		Palabra_reservada_functionContext _localctx = new Palabra_reservada_functionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_palabra_reservada_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(FUNCTION);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Palabra_reservada_mainContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(ExprParser.MAIN, 0); }
		public Palabra_reservada_mainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_palabra_reservada_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterPalabra_reservada_main(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitPalabra_reservada_main(this);
		}
	}

	public final Palabra_reservada_mainContext palabra_reservada_main() throws RecognitionException {
		Palabra_reservada_mainContext _localctx = new Palabra_reservada_mainContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_palabra_reservada_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(MAIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Palabra_reservada_whileContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(ExprParser.WHILE, 0); }
		public Palabra_reservada_whileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_palabra_reservada_while; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterPalabra_reservada_while(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitPalabra_reservada_while(this);
		}
	}

	public final Palabra_reservada_whileContext palabra_reservada_while() throws RecognitionException {
		Palabra_reservada_whileContext _localctx = new Palabra_reservada_whileContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_palabra_reservada_while);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(WHILE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Palabra_reservada_ifContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(ExprParser.IF, 0); }
		public Palabra_reservada_ifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_palabra_reservada_if; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterPalabra_reservada_if(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitPalabra_reservada_if(this);
		}
	}

	public final Palabra_reservada_ifContext palabra_reservada_if() throws RecognitionException {
		Palabra_reservada_ifContext _localctx = new Palabra_reservada_ifContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_palabra_reservada_if);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(IF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Palabra_reservada_forContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(ExprParser.FOR, 0); }
		public Palabra_reservada_forContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_palabra_reservada_for; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterPalabra_reservada_for(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitPalabra_reservada_for(this);
		}
	}

	public final Palabra_reservada_forContext palabra_reservada_for() throws RecognitionException {
		Palabra_reservada_forContext _localctx = new Palabra_reservada_forContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_palabra_reservada_for);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(FOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
